# sql_mcp

./: .env.example  .gitignore  .mcp.json  pyproject.toml  setup.py
.claude/agents/: index-advisor.md  sql-database-analyst.md
.claude/commands/: data-engineer.md
src/azure_sql_mcp/: server.py
